NEW CONTENT
- Added Lush Soil Ball
- Added Wisplant-Infused Lush Soil Ball
- Added various hardmode counterparts to existing Verdant tiles
- Added Puff Block
- Added Yellow Sprouts (Yellow Bulb tile)
- Added Verdant Tree alternate top sprite for hardmode
- Added New Beginnings compatibility
- Added Book system
	Includes Lightbulb, Leaf and Hardy Vine books - alongside others
- Added Overgrown Bricks
- Added Green Crystals
- Added Hanging Crystal
- Added Research Books
- Added Study structure
- Added a couple more Apotheosis dialogue lines
- Added Flotie of Wrath
- Added Floral Tea
- Added Lush Root Rope
- Added Lush Vine Wall
- Added Propellerpad
- Added Niss Carp
- Added Poolworm

CHANGES
- Dryad no longer sells Yellow Bulbs in Hardmode after any mech has been defeated
- Sprite edits for:
	Yellow Bulb item
	Lush Vine Rope tile
- Beehives can be placed on all tiles
- Adjusted speed that foreground/background leaves fly at in wind
- Fixed ScreenText being drawn only when the mouse is drawn
- Moved ScreenText to new UI layer so other mods can modify it if they wish (it's called "Verdant: Screen Text")
- Fixed Beehives spawning too many bees
- Fixed Lush Wood merging with dirt
- Heavily nerfed how much Wisplant items grow Chlorophyte
- Buffed Magic-Infused Wisplant use time
- Increased Magic-Infused Wisplant recipe requirements
- Fixed Bumblebees not flipping sprite when roaming
- Added Guide to Critter Companionship compatibility with all critters
- Unloaded Folifish in order to make way for new fishes