@@ -1,0 +1,14 @@
+﻿using Terraria.ID;
+using Terraria.ModLoader;
+using Verdant.Items.Verdant.Materials;
+
+namespace Verdant.Items.Verdant.Blocks.VerdantFurniture
+{
+    [Sacrifice(1)]
+    public class VerdantBedItem : ModItem
+    {
+        public override void SetStaticDefaults() => QuickItem.SetStatic(this, "Verdant Bed", "");
+        public override void SetDefaults() => QuickItem.SetBlock(this, 54, 34, ModContent.TileType<Tiles.Verdant.Decor.VerdantFurniture.VerdantBed>());
+        public override void AddRecipes() => QuickItem.AddRecipe(this, TileID.LivingLoom, 1, (ModContent.ItemType<LushLeaf>(), 10), (ModContent.ItemType<RedPetal>(), 5), (ItemID.Silk, 5));
+    }
+}
